--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,24 @@
-/* Inserta tu código aqui */
+.contenedor{
+    margin: 0 auto;
+    padding: 0;
+    
+}
+
+header {
+    background-color: black;
+    width: 90%;
+    margin: 0 auto;
+    position: absolute
+    }
+
+.logo {
+      float: left;
+    }
+
+nav div {
+    color: #fff;
+    display: inline-block;
+    position: relative;
+    text-align: center;
+    }
+
