--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,86 @@
-.contenedor{
-    margin: 0 auto;
-    padding: 0;
-    
+body{
+    font-family: sans-serif;
+}
+.cabecera{
+	background-color: #000;
+	}
+
+.logo{
+   width: 150%;
 }
 
-header {
-    background-color: black;
-    width: 90%;
-    margin: 0 auto;
-    position: absolute
-    }
-
-.logo {
-      float: left;
-    }
+nav{
+   float: right;
+}
 
 nav div {
-    color: #fff;
-    display: inline-block;
-    position: relative;
-    text-align: center;
+	display: inline-block;
+	color: #fff;
+	margin: 4.5% auto;
     }
+.enlaces h3, h4{
+    text-align: center;
+    display: inline-block; 
+    padding: 0.5%;
+} 
 
+.submenu{
+	padding: 20px 0;
+	background-color: #E6E6E6;
+	}
+
+.submenu .col-3 img{
+	max-width: 100%;
+}
+
+.lista li {
+    list-style: none;
+    margin: 5px 15px;
+    padding: 0;
+    display: inline-block;
+    font-size: 15px;
+    color: black;
+    text-align: center;
+}
+.contenido li img{
+	width: 100px;
+	display: inline-block;
+	}
+
+
+.contenido .icono{
+	width: 15px;
+	height: 15px;
+}
+.contenido h3{
+	font-size: 15px;
+	font-family: Arial;
+	padding-left: 0;
+	padding-bottom: 5px;
+	border-bottom: 2px solid #A4A4A4;
+}
+.piepagina{
+	background-color: #000;
+	text-align: center;
+	color: #fff;
+	padding-top: 30px;
+	padding-bottom: 30px;
+	margin-top: 50px;
+}
+.piepagina p{
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+.piepagina li{
+	list-style-type: none;
+	display: inline;
+	margin-right: 20px;
+}
+.piepagina a{
+	text-decoration: none;
+	color: #fff;
+}
+.piepagina .copyright{
+	color: #BDBDBD;
+	font-size: 12px;
+	}
