--- a/css/style.css
+++ b/css/style.css
@@ -63,16 +63,42 @@ nav div {
     outline-style: none;
 }
 
-.itunes{
-    display: inline-block;
+.lista-img .nav-link h3 {
+    border-bottom: 3px solid #ccc;
+    margin:20px 0;
+    padding-bottom: 5px;
 }
-.itunes li img{
-	width: 15px;
-   }
-.itunes li{
+.lista .nav-link ul {
     list-style: none;
-    font-size: 10px;
-    }
+    margin:0;
+    padding: 0;
+}
+.lista .nav-link ul img {
+    margin-right:15px;
+    width:15px;
+}
+.lista .nav-link ul a {
+    text-decoration: none;
+    color: #4987bc;
+    width:300px;
+    display:inline-block;
+    font-size: 17px;
+}
+.lista .nav-link li {
+    display: block;
+}
+.lista .nav-link p {
+    border-top:3px solid #ccc;
+    margin-top: 20px;
+    padding-top: 20px;
+    line-height: 1.5em;
+}
+.lista .nav-link p a {
+    color: #4987bc;
+}
+.nav-link {
+    padding-left: 45px;
+}
 
 .contenido h3{
 	font-size: 15px;
